--- a/leaflet/Base.lproj/Main.storyboard
+++ b/leaflet/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="CPb-kf-hrw">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -470,13 +471,39 @@
                     <view key="view" contentMode="scaleToFill" id="pnz-t9-Jcu">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="82a-bs-Zdw">
+                                <rect key="frame" x="0.0" y="84" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="82a-bs-Zdw" secondAttribute="height" multiplier="1:1" id="GQ6-Si-XrC"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="82a-bs-Zdw" secondAttribute="trailing" constant="15" id="B6B-WC-uYH"/>
+                            <constraint firstItem="82a-bs-Zdw" firstAttribute="top" secondItem="P89-x0-c4s" secondAttribute="bottom" constant="20" id="EHl-hj-4Zm"/>
+                            <constraint firstItem="82a-bs-Zdw" firstAttribute="top" secondItem="P89-x0-c4s" secondAttribute="bottom" id="WBC-sc-6yr"/>
+                            <constraint firstItem="82a-bs-Zdw" firstAttribute="leading" secondItem="pnz-t9-Jcu" secondAttribute="leadingMargin" constant="15" id="wq5-nT-vzZ"/>
+                            <constraint firstItem="82a-bs-Zdw" firstAttribute="top" secondItem="P89-x0-c4s" secondAttribute="bottom" constant="15" id="wuf-wQ-Mce"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="EHl-hj-4Zm"/>
+                                <exclude reference="wuf-wQ-Mce"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="u9r-cA-KPb">
                         <barButtonItem key="leftBarButtonItem" title="Menu" id="jWK-x4-8Fh"/>
                     </navigationItem>
                     <connections>
                         <outlet property="menuButton" destination="jWK-x4-8Fh" id="OfJ-vR-z4t"/>
+                        <outlet property="storyDescription" destination="82a-bs-Zdw" id="iis-Jy-TPS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aiC-7n-G5l" userLabel="First Responder" sceneMemberID="firstResponder"/>
