--- a/leaflet/Base.lproj/Main.storyboard
+++ b/leaflet/Base.lproj/Main.storyboard
@@ -31,25 +31,56 @@
         <scene sceneID="rmZ-5L-9aQ">
             <objects>
                 <tableViewController storyboardIdentifier="listView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="mNX-aG-1zn" customClass="PointsOfInterestListViewController" customModule="leaflet" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="sfc-uv-cB7">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="22" sectionFooterHeight="22" id="sfc-uv-cB7">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pointOfInterest" id="Kam-5K-ARx" customClass="PointsOfInterestListViewCell" customModule="leaflet" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pointOfInterest" rowHeight="60" id="Kam-5K-ARx" customClass="PointsOfInterestListViewCell" customModule="leaflet" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Kam-5K-ARx" id="jdr-uR-TOR">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l5E-5v-dZF">
+                                            <rect key="frame" x="20" y="5" width="50" height="49"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="6U1-1x-YrT"/>
+                                                <constraint firstAttribute="width" constant="50" id="8vO-1I-mB4"/>
+                                            </constraints>
+                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Point of Interest" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hsp-9v-PKH">
-                                            <rect key="frame" x="16" y="11" width="566" height="21"/>
+                                            <rect key="frame" x="78" y="11" width="566" height="21"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="16"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DDe-bX-wAz">
+                                            <rect key="frame" x="78" y="28" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="11"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="l5E-5v-dZF" firstAttribute="leading" secondItem="jdr-uR-TOR" secondAttribute="leading" constant="10" id="5Ks-L6-olI"/>
+                                        <constraint firstItem="l5E-5v-dZF" firstAttribute="leading" secondItem="jdr-uR-TOR" secondAttribute="leadingMargin" constant="10" id="7Ze-hp-saO"/>
+                                        <constraint firstAttribute="bottom" secondItem="l5E-5v-dZF" secondAttribute="bottom" constant="5" id="8j4-EN-ZWW"/>
+                                        <constraint firstAttribute="centerY" secondItem="l5E-5v-dZF" secondAttribute="centerY" id="Cry-kY-7TB"/>
+                                        <constraint firstItem="l5E-5v-dZF" firstAttribute="leading" secondItem="jdr-uR-TOR" secondAttribute="leading" constant="20" id="HRi-vu-vBi"/>
+                                        <constraint firstItem="l5E-5v-dZF" firstAttribute="leading" secondItem="jdr-uR-TOR" secondAttribute="leadingMargin" id="Khp-YS-4kr"/>
+                                        <constraint firstItem="l5E-5v-dZF" firstAttribute="top" secondItem="jdr-uR-TOR" secondAttribute="top" constant="5" id="VcU-p5-ulY"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="5Ks-L6-olI"/>
+                                            <exclude reference="7Ze-hp-saO"/>
+                                            <exclude reference="HRi-vu-vBi"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="locationAway" destination="DDe-bX-wAz" id="Ub2-gb-895"/>
+                                    <outlet property="poiImage" destination="l5E-5v-dZF" id="C7J-RB-pZD"/>
                                     <outlet property="poiName" destination="Hsp-9v-PKH" id="ShC-r0-nXv"/>
                                 </connections>
                             </tableViewCell>
@@ -210,24 +241,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rain-veil.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="5LU-Ea-e5V">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="rain-veil.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="5LU-Ea-e5V">
                                 <rect key="frame" x="0.0" y="64" width="600" height="280"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="280" id="QwV-y3-5om"/>
                                 </constraints>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82a-bs-Zdw">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82a-bs-Zdw">
                                 <rect key="frame" x="0.0" y="344" width="600" height="120"/>
                                 <color key="backgroundColor" red="0.90569760101010099" green="0.90569760101010099" blue="0.90569760101010099" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="2rC-QZ-1y9"/>
                                     <constraint firstAttribute="height" constant="120" id="XyA-sJ-8Lq"/>
                                 </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="XyA-sJ-8Lq"/>
+                                    </mask>
+                                </variation>
                             </textView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="oSd-iU-RoS">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="oSd-iU-RoS">
                                 <rect key="frame" x="0.0" y="464" width="600" height="136"/>
                                 <color key="backgroundColor" red="0.90569760099999996" green="0.90569760099999996" blue="0.90569760099999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="0.90569760099999996" green="0.90569760099999996" blue="0.90569760099999996" alpha="1" colorSpace="calibratedRGB"/>
@@ -250,7 +287,7 @@
                                     <outlet property="delegate" destination="N9T-uL-LbZ" id="gk8-YC-aQI"/>
                                 </connections>
                             </tableView>
-                            <visualEffectView opaque="NO" alpha="0.79999999999999982" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MJp-jg-rnh">
+                            <visualEffectView opaque="NO" alpha="0.79999999999999982" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MJp-jg-rnh">
                                 <rect key="frame" x="0.0" y="264" width="600" height="80"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="X1W-62-Vb0">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
@@ -299,6 +336,11 @@
                             <constraint firstItem="82a-bs-Zdw" firstAttribute="top" secondItem="MJp-jg-rnh" secondAttribute="bottom" id="fNr-Sv-eUM"/>
                             <constraint firstItem="MJp-jg-rnh" firstAttribute="leading" secondItem="pnz-t9-Jcu" secondAttribute="leadingMargin" constant="-16" id="ohL-wX-yGw"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="eCQ-S2-eyI"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="u9r-cA-KPb">
                         <barButtonItem key="leftBarButtonItem" title="Back" id="jWK-x4-8Fh">
@@ -340,7 +382,7 @@
                                     <segue destination="R7p-xw-NKv" kind="show" identifier="NextPoi" id="qm1-H0-1jv"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b85-44-dJF">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b85-44-dJF">
                                 <rect key="frame" x="0.0" y="64" width="600" height="156"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLW-fz-lUh">
