--- a/leaflet/Base.lproj/Main.storyboard
+++ b/leaflet/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9Mp-I4-dRc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9Mp-I4-dRc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -41,8 +41,8 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Kam-5K-ARx" id="jdr-uR-TOR">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l5E-5v-dZF">
-                                            <rect key="frame" x="20" y="5" width="50" height="49"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l5E-5v-dZF">
+                                            <rect key="frame" x="8" y="5" width="50" height="50"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="50" id="6U1-1x-YrT"/>
                                                 <constraint firstAttribute="width" constant="50" id="8vO-1I-mB4"/>
@@ -62,21 +62,9 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="l5E-5v-dZF" firstAttribute="leading" secondItem="jdr-uR-TOR" secondAttribute="leading" constant="10" id="5Ks-L6-olI"/>
-                                        <constraint firstItem="l5E-5v-dZF" firstAttribute="leading" secondItem="jdr-uR-TOR" secondAttribute="leadingMargin" constant="10" id="7Ze-hp-saO"/>
-                                        <constraint firstAttribute="bottom" secondItem="l5E-5v-dZF" secondAttribute="bottom" constant="5" id="8j4-EN-ZWW"/>
-                                        <constraint firstAttribute="centerY" secondItem="l5E-5v-dZF" secondAttribute="centerY" id="Cry-kY-7TB"/>
-                                        <constraint firstItem="l5E-5v-dZF" firstAttribute="leading" secondItem="jdr-uR-TOR" secondAttribute="leading" constant="20" id="HRi-vu-vBi"/>
                                         <constraint firstItem="l5E-5v-dZF" firstAttribute="leading" secondItem="jdr-uR-TOR" secondAttribute="leadingMargin" id="Khp-YS-4kr"/>
                                         <constraint firstItem="l5E-5v-dZF" firstAttribute="top" secondItem="jdr-uR-TOR" secondAttribute="top" constant="5" id="VcU-p5-ulY"/>
                                     </constraints>
-                                    <variation key="default">
-                                        <mask key="constraints">
-                                            <exclude reference="5Ks-L6-olI"/>
-                                            <exclude reference="7Ze-hp-saO"/>
-                                            <exclude reference="HRi-vu-vBi"/>
-                                        </mask>
-                                    </variation>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="locationAway" destination="DDe-bX-wAz" id="Ub2-gb-895"/>
@@ -139,7 +127,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bX8-oo-PyC" customClass="GMSMapView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bX8-oo-PyC">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -241,14 +229,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="rain-veil.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="5LU-Ea-e5V">
-                                <rect key="frame" x="0.0" y="64" width="600" height="280"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rain-veil.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="5LU-Ea-e5V">
+                                <rect key="frame" x="0.0" y="20" width="600" height="280"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="280" id="QwV-y3-5om"/>
                                 </constraints>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82a-bs-Zdw">
-                                <rect key="frame" x="0.0" y="344" width="600" height="120"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82a-bs-Zdw">
+                                <rect key="frame" x="0.0" y="300" width="600" height="120"/>
                                 <color key="backgroundColor" red="0.90569760101010099" green="0.90569760101010099" blue="0.90569760101010099" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -264,8 +252,8 @@
                                     </mask>
                                 </variation>
                             </textView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="oSd-iU-RoS">
-                                <rect key="frame" x="0.0" y="464" width="600" height="136"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="oSd-iU-RoS">
+                                <rect key="frame" x="0.0" y="420" width="600" height="180"/>
                                 <color key="backgroundColor" red="0.90569760099999996" green="0.90569760099999996" blue="0.90569760099999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="0.90569760099999996" green="0.90569760099999996" blue="0.90569760099999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
@@ -287,8 +275,8 @@
                                     <outlet property="delegate" destination="N9T-uL-LbZ" id="gk8-YC-aQI"/>
                                 </connections>
                             </tableView>
-                            <visualEffectView opaque="NO" alpha="0.79999999999999982" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MJp-jg-rnh">
-                                <rect key="frame" x="0.0" y="264" width="600" height="80"/>
+                            <visualEffectView opaque="NO" alpha="0.79999999999999982" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MJp-jg-rnh">
+                                <rect key="frame" x="0.0" y="220" width="600" height="80"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="X1W-62-Vb0">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -332,6 +320,7 @@
                             <constraint firstItem="oSd-iU-RoS" firstAttribute="top" secondItem="82a-bs-Zdw" secondAttribute="bottom" id="YWN-yj-IPd"/>
                             <constraint firstAttribute="trailingMargin" secondItem="5LU-Ea-e5V" secondAttribute="trailing" constant="-16" id="bxb-MN-bVP"/>
                             <constraint firstItem="oSd-iU-RoS" firstAttribute="leading" secondItem="pnz-t9-Jcu" secondAttribute="leadingMargin" constant="-16" id="cvD-qd-Znx"/>
+                            <constraint firstItem="A3w-mM-fj9" firstAttribute="top" secondItem="oSd-iU-RoS" secondAttribute="bottom" id="di3-xq-kC7"/>
                             <constraint firstItem="A3w-mM-fj9" firstAttribute="top" secondItem="oSd-iU-RoS" secondAttribute="bottom" id="eCQ-S2-eyI"/>
                             <constraint firstItem="82a-bs-Zdw" firstAttribute="top" secondItem="MJp-jg-rnh" secondAttribute="bottom" id="fNr-Sv-eUM"/>
                             <constraint firstItem="MJp-jg-rnh" firstAttribute="leading" secondItem="pnz-t9-Jcu" secondAttribute="leadingMargin" constant="-16" id="ohL-wX-yGw"/>
@@ -382,8 +371,8 @@
                                     <segue destination="R7p-xw-NKv" kind="show" identifier="NextPoi" id="qm1-H0-1jv"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b85-44-dJF">
-                                <rect key="frame" x="0.0" y="64" width="600" height="156"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b85-44-dJF">
+                                <rect key="frame" x="0.0" y="20" width="600" height="200"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLW-fz-lUh">
                                 <rect key="frame" x="16" y="230" width="568" height="300"/>
