--- a/leaflet/Base.lproj/Main.storyboard
+++ b/leaflet/Base.lproj/Main.storyboard
@@ -362,7 +362,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="QLF-E6-Cwd">
-                        <barButtonItem key="leftBarButtonItem" title="Menu" id="UiT-qr-lJs">
+                        <barButtonItem key="leftBarButtonItem" image="hamburger" id="UiT-qr-lJs">
                             <connections>
                                 <action selector="toggleSideMenu:" destination="09m-YL-8Uf" id="how-c0-Znq"/>
                             </connections>
@@ -486,7 +486,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Stories" id="pjq-Yz-YeB">
-                        <barButtonItem key="leftBarButtonItem" title="Menu" id="IuD-kN-DBE">
+                        <barButtonItem key="leftBarButtonItem" image="hamburger" id="IuD-kN-DBE">
                             <connections>
                                 <action selector="toggleSideMenu:" destination="b3b-OK-GQ5" id="uQ5-dY-P3x"/>
                             </connections>
@@ -646,7 +646,6 @@
                                             <outlet property="locationAway" destination="fB3-n9-5az" id="ruG-1k-zf8"/>
                                             <outlet property="poiImage" destination="1xV-Pu-hDN" id="pEs-Ke-yRt"/>
                                             <outlet property="poiName" destination="SdK-ed-ia5" id="hVT-10-SuI"/>
-                                            <segue destination="R7p-xw-NKv" kind="show" identifier="ShowPoiDetail" id="nF9-8N-pdO"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -665,9 +664,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="u9r-cA-KPb">
-                        <barButtonItem key="leftBarButtonItem" title="Back" id="jWK-x4-8Fh">
+                        <barButtonItem key="leftBarButtonItem" image="back" id="9zI-k6-rTq">
                             <connections>
-                                <action selector="backToMenu:" destination="N9T-uL-LbZ" id="ifl-NE-33a"/>
+                                <action selector="backToMenu:" destination="N9T-uL-LbZ" id="Uwk-Vj-bzv"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -695,24 +694,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k6X-mD-obo">
-                                <rect key="frame" x="277" y="550" width="46" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="46" id="2Vz-sB-uvC"/>
-                                </constraints>
-                                <state key="normal" title="Next">
-                                    <color key="titleColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="R7p-xw-NKv" kind="show" identifier="NextPoi" id="qm1-H0-1jv"/>
-                                </connections>
-                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b85-44-dJF">
-                                <rect key="frame" x="0.0" y="20" width="600" height="200"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="226"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLW-fz-lUh">
-                                <rect key="frame" x="16" y="230" width="568" height="300"/>
+                                <rect key="frame" x="16" y="256" width="568" height="300"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="oPm-0f-CFX"/>
@@ -727,18 +713,29 @@
                             <constraint firstItem="aLW-fz-lUh" firstAttribute="top" secondItem="b85-44-dJF" secondAttribute="bottom" constant="10" id="5ed-p7-neo"/>
                             <constraint firstItem="aLW-fz-lUh" firstAttribute="leading" secondItem="Tmm-BH-rkz" secondAttribute="leadingMargin" id="77u-Ag-Q69"/>
                             <constraint firstItem="aLW-fz-lUh" firstAttribute="trailing" secondItem="Tmm-BH-rkz" secondAttribute="trailingMargin" id="7CT-an-6zJ"/>
-                            <constraint firstItem="k6X-mD-obo" firstAttribute="top" secondItem="aLW-fz-lUh" secondAttribute="bottom" constant="20" id="ALy-sj-gGr"/>
+                            <constraint firstItem="b85-44-dJF" firstAttribute="top" secondItem="5xx-dS-ZVL" secondAttribute="bottom" id="81A-aD-kRF"/>
+                            <constraint firstItem="jns-8U-vqO" firstAttribute="top" secondItem="aLW-fz-lUh" secondAttribute="bottom" id="Aae-J5-bNH"/>
                             <constraint firstItem="b85-44-dJF" firstAttribute="top" secondItem="5xx-dS-ZVL" secondAttribute="bottom" id="AkA-zR-ZyJ"/>
                             <constraint firstItem="b85-44-dJF" firstAttribute="leading" secondItem="Tmm-BH-rkz" secondAttribute="leadingMargin" constant="-16" id="d5Z-Sp-XFv"/>
                             <constraint firstAttribute="trailingMargin" secondItem="b85-44-dJF" secondAttribute="trailing" constant="-16" id="fZh-oi-3YQ"/>
-                            <constraint firstAttribute="bottom" secondItem="k6X-mD-obo" secondAttribute="bottom" constant="20" symbolic="YES" id="hqS-pI-ACw"/>
-                            <constraint firstAttribute="centerX" secondItem="k6X-mD-obo" secondAttribute="centerX" id="rTp-s5-1bd"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="ULA-Nz-xBM"/>
+                    <toolbarItems>
+                        <barButtonItem image="back" id="gQa-M0-caC">
+                            <connections>
+                                <action selector="backButtonAction:" destination="R7p-xw-NKv" id="QQj-jQ-vVV"/>
+                            </connections>
+                        </barButtonItem>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" id="nng-Yp-4MM">
+                        <connections>
+                            <outlet property="leftBarButtonItem" destination="gQa-M0-caC" id="zO2-GA-RnW"/>
+                        </connections>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="imageView" destination="b85-44-dJF" id="MPI-G8-2Uy"/>
-                        <outlet property="navBarTitle" destination="ULA-Nz-xBM" id="6B0-6x-dGH"/>
+                        <outlet property="navBar" destination="nng-Yp-4MM" id="D3U-Nt-aMt"/>
                         <outlet property="textView" destination="aLW-fz-lUh" id="Xcj-KG-dCJ"/>
                     </connections>
                 </viewController>
@@ -748,10 +745,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="back" width="44" height="44"/>
+        <image name="hamburger" width="44" height="44"/>
         <image name="rain-veil.jpg" width="640" height="416"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="nF9-8N-pdO"/>
-    </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
 </document>
